syntax="proto3";
package eos.console;

message NsProto {
  message StatProto {
    bool Groupids   = 1;
    bool Monitor    = 2;
    bool NumericIds = 3;
    bool Reset      = 4;
    bool Standard   = 5;
  }

  message MutexProto {
    bool List = 1;
    bool Toggle_timing = 2;
    bool Toggle_order  = 3;
    bool Sample_rate1  = 4;
    bool Sample_rate10 = 5;
    bool Sample_rate100 = 6;
  }

  message CompactProto {
    enum CompactType {
      FILES        = 0;
      DIRS         = 1;
      ALL          = 2;
      FILES_REPAIR = 3;
      DIRS_REPAIR  = 4;
      ALL_REPAIR   = 5;
   }

   bool On = 1;
   CompactType type = 2;
   int64 Delay    = 3;
   int64 Interval = 4;
  }

  message MasterProto {
    enum OpType {
      NONE      = 0;
      LOG       = 1;
      LOG_CLEAR = 2;
      DISABLE   = 3;
      ENABLE    = 4;
    }

    OpType op = 1;
    string Host = 2;
  }

  oneof subcmd {
    bool default         = 1;
    StatProto stat       = 2;
    MutexProto mutex     = 3;
    CompactProto compact = 4;
    MasterProto master   = 5;
  }
}
