//------------------------------------------------------------------------------
// File: Access.proto
// Author: Fabio Luchetti - CERN
//------------------------------------------------------------------------------

syntax="proto3";
package eos.console;

option go_package = "eos.rest.gateway.service";

message AccessProto {

  message LsProto {
    bool monitoring = 1; // [-m]
    bool id2name = 2; // [-n]
  }

  message RmProto {
    enum Rule {
      NONE     = 0; // error
      REDIRECT = 1;
      STALL    = 2;
      LIMIT    = 3;
    }
    Rule rule     = 1;
    string key    = 2;
  }

  message SetProto {
    enum Rule {
      NONE     = 0; // error
      REDIRECT = 1;
      STALL    = 2;
      LIMIT    = 3;
    }
    Rule rule     = 1;
    string target = 2;
    string key    = 3;
  }

  message BanProto {
    enum IdType {
      NOTYPE     = 0; // error
      USER       = 1;
      GROUP      = 2;
      HOST       = 3;
      DOMAINNAME = 4;
      TOKEN      = 5;
    }
    IdType idtype = 1;
    string id = 2;
  }

  message UnbanProto {
    enum IdType {
      NOTYPE     = 0; // error
      USER       = 1;
      GROUP      = 2;
      HOST       = 3;
      DOMAINNAME = 4;
      TOKEN      = 5;
    }
    IdType idtype = 1;
    string id = 2;
  }

  message AllowProto {
    enum IdType {
      NOTYPE     = 0; // error
      USER       = 1;
      GROUP      = 2;
      HOST       = 3;
      DOMAINNAME = 4;
      TOKEN      = 5;
    }
    IdType idtype = 1;
    string id = 2;
  }

  message UnallowProto {
    enum IdType {
      NOTYPE     = 0; // error
      USER       = 1;
      GROUP      = 2;
      HOST       = 3;
      DOMAINNAME = 4;
      TOKEN      = 5;
    }
    IdType idtype = 1;
    string id = 2;
  }

  message StallHostsProto {
    enum Operation {
      ADD        = 0;
      REMOVE     = 1;		
    }
    enum Type {
      STALL      = 0;
      NOSTALL    = 1;
    }
    Operation op       = 1;
    Type type          = 2;
    string hostpattern = 3;
  }

  oneof subcmd {
    LsProto ls = 1;
    RmProto rm = 2;
    SetProto set = 3;
    BanProto ban = 4;
    UnbanProto unban = 5;
    AllowProto allow = 6;
    UnallowProto unallow = 7;
    StallHostsProto stallhosts = 8;
  }

}
