syntax="proto3";
package eos.console;

option go_package = "eos.rest.gateway.service";

message EvictProto {
  message FileProto {
    oneof File {
      string Path = 1;
      uint64 Fid = 2;
    }
  }

  message EvictSingleReplicaProto {
    uint64 fsid = 1;
  }

  repeated FileProto File = 1;
  EvictSingleReplicaProto evictSingleReplica = 2;
  bool ignoreEvictCounter = 3;
  bool ignoreRemovalOnFst = 4;
}
