syntax="proto3";
package eos.console;

message RecycleProto {
  message LsProto {
    bool FullDetails = 1;
    bool NumericIds  = 2;
    bool MonitorFmt  = 3;
    bool All         = 4;
    string Date      = 5;
  }

  message PurgeProto {
    bool All     = 1;
    string Date  = 2;
  }

  message RestoreProto {
    bool ForceOrigName   = 1;
    bool RestoreVersions = 2;
    string Key = 3;
    bool MakePath = 4;
  }

  message ConfigProto {
    enum OpType {
     ADD_BIN  = 0;
     RM_BIN   = 1;
     LIFETIME = 2;
     RATIO    = 3;
     SIZE     = 4;
     INODES   = 5;
    }

    OpType op         = 1;
    string Subtree    = 2;
    int32 LifetimeSec = 3;
    float Ratio       = 4;
    uint64 Size       = 5; // Use by either SIZE or INODES
  }

  oneof subcmd {
    LsProto ls           = 1;
    PurgeProto purge     = 2;
    RestoreProto restore = 3;
    ConfigProto config   = 4;
  }
}
