// ----------------------------------------------------------------------------
// File: Rmdir.proto
// Author: Branko Blagojevic <branko.blagojevic@comtrade.com>
// ----------------------------------------------------------------------------
syntax="proto3";

package eos.console;

import "Metadata.proto";

option go_package = "eos.rest.gateway.service";

message RmdirProto {
  Metadata md = 1;
}
